fix: remove multiple filter: drop-shadow(), due to performance drop on mobile

--- a/src/components/ui/NavBar/NavBar.module.scss
+++ b/src/components/ui/NavBar/NavBar.module.scss
@@ -13,7 +13,7 @@
   width: 100%;
   height: var(--navbar-height);
 
-  filter: drop-shadow(0 0 1px white) drop-shadow(0 0 5px white) drop-shadow(0 0 10px white);
+  filter: drop-shadow(0 0 5px white);
   backdrop-filter: blur(var(--light-blur));
 }
 
